remove hearer, update title levels

--- a/R_analysis.ipynb
+++ b/R_analysis.ipynb
@@ -1,15 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
-   "id": "e9a302ad",
+   "cell_type": "markdown",
+   "id": "bdd8b3c3",
    "metadata": {},
    "source": [
-    "---\n",
-    "title: \"R Notebook for Imaging Stats MIC Course\"\n",
-    "output:\n",
-    "  rmdformats::downcute: default\n",
-    "---"
+    "# R Notebook for Imaging Stats MIC Course"
    ]
   },
   {
@@ -17,7 +13,7 @@
    "id": "19e52d95",
    "metadata": {},
    "source": [
-    "# Load required libraries"
+    "## Load required libraries"
    ]
   },
   {
@@ -64,7 +60,7 @@
    "id": "69af0ff2",
    "metadata": {},
    "source": [
-    "# Load data\n",
+    "## Load data\n",
     "\n",
     "Column names include spaces. Use the `check.names` parameter to change them to proper names."
    ]
@@ -160,7 +156,7 @@
    "id": "901a7f32",
    "metadata": {},
    "source": [
-    "# Data preparation\n",
+    "## Data preparation\n",
     "\n",
     "Add a grouping column to differentiate between wells A-D and E-H, and set the order of factors in the `drug.type` column."
    ]
@@ -195,7 +191,7 @@
    "id": "5ec9a648",
    "metadata": {},
    "source": [
-    "# Data overview"
+    "## Data overview"
    ]
   },
   {
@@ -257,7 +253,7 @@
    "id": "c7ac9aac",
    "metadata": {},
    "source": [
-    "## Sample size\n",
+    "### Sample size\n",
     "\n",
     "The number of measurements per group."
    ]
@@ -342,7 +338,7 @@
    "id": "c42ac9c9",
    "metadata": {},
    "source": [
-    "## Area vs intensity"
+    "### Area vs intensity"
    ]
   },
   {
@@ -384,7 +380,7 @@
    "id": "2d3d162e",
    "metadata": {},
    "source": [
-    "# Normalisation\n",
+    "## Normalisation\n",
     "\n",
     "Normalised Percentage Activation: $$NPA = \\frac{meas - CTRL_-}{CTRL_+ - CTRL_-}$$\n",
     "\n",
@@ -482,7 +478,7 @@
    "id": "ae2cd057",
    "metadata": {},
    "source": [
-    "# Fit a sigmoid response\n",
+    "## Fit a sigmoid response\n",
     "\n",
     "Calculate EC50, i.e. concentration that induces a response halfway between the baseline and the maximum.\n",
     "\n",
@@ -498,7 +494,7 @@
    "id": "b1654393",
    "metadata": {},
    "source": [
-    "# 3-parameter Hill function\n",
+    "## 3-parameter Hill function\n",
     "\n",
     "The three-parameter log-logistic dose response function with lower limit 0 is: $$f(x) = \\frac{d}{1+\\exp(b(\\log(x)-\\log(e)))}$$\n",
     "\n",
@@ -552,7 +548,7 @@
    "id": "6013e879",
    "metadata": {},
    "source": [
-    "# Fitting\n",
+    "## Fitting\n",
     "\n",
     "The default non-robust least squares estimation (\"mean\").\n"
    ]
@@ -604,7 +600,7 @@
    "id": "a5ce6d88",
    "metadata": {},
    "source": [
-    "## Fitted model"
+    "### Fitted model"
    ]
   },
   {
@@ -628,7 +624,7 @@
    "id": "d163858a",
    "metadata": {},
    "source": [
-    "## Fitted ED50\n",
+    "### Fitted ED50\n",
     "\n",
     "The estimation of the effective dose (EC50 / ED50 / IC50), i.e. the dose that induces the half-maximum response."
    ]
@@ -661,7 +657,7 @@
    "id": "d8861900",
    "metadata": {},
    "source": [
-    "## Relative potency\n",
+    "### Relative potency\n",
     "\n",
     "Relative potency calculated as the ratio of ED50 estimates for both groups."
    ]
@@ -693,7 +689,7 @@
    "id": "69016537",
    "metadata": {},
    "source": [
-    "## Slope comparison \n",
+    "### Slope comparison \n",
     "\n",
     "Comparison of slopes by means of a z-test for estimates from both groups."
    ]
